重构了部分代码

--- a/web/views/html/index.html
+++ b/web/views/html/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<form method="post">
-			<input id="word" name="word" />
+			<input id="q" name="q" />
 			<input type="submit" value="Gopher Search" />
 		</form>
 	</body>
